--- a/css/style.less
+++ b/css/style.less
@@ -137,6 +137,7 @@ ul.list {
 .text-block-title {
   font: 700 36px/1.3 @font;
 }
+::-ms-clear { display: none; }
 
 .wrapper {
   position: relative;
@@ -511,37 +512,30 @@ ul.list {
             display: flex;
             margin-bottom: 0;
             li {
-              &:last-child {
-                span {
-                  padding-right: 0;
-                  &:after {
-                    display: none;
-                  }
-                }
-                > span {
-                  color: #000;
-                }
+              position: relative;
+              margin-right: 10px;
+              padding-right: 7px;
+              font: 300 14px/1.5 @font;
+              &:after {
+                content: '';
+                position: absolute;
+                right: 0;
+                top: 50%;
+                width: 1px;
+                height: 10px;
+                transform: translateY(-50%);
+                background: #808080;
               }
-              a,
-              > span {
-                position: relative;
-                margin-right: 10px;
-                padding-right: 7px;
-                font: 300 14px/1.3 @font;
-                color: #808080;
+              &:last-child {
+                margin-right: 0;
+                padding-right: 0;
+                color: #000;
                 &:after {
-                  content: '';
-                  position: absolute;
-                  right: 0;
-                  top: 50%;
-                  width: 1px;
-                  height: 10px;
-                  transform: translateY(-50%);
-                  background: #808080;
+                  display: none;
                 }
               }
               a {
-                display: inline-block;
+                color: #808080;
                 &:hover {
                   text-decoration: underline;
                 }
@@ -734,7 +728,7 @@ ul.list {
               text-align: right;
               img {
                 max-width: 100%;
-                max-height: 130px;
+                max-height: 120px;
               }
             }
           }
@@ -3609,6 +3603,10 @@ ul.list {
             flex-wrap: wrap;
             justify-content: space-between;
             margin-top: 50px;
+            &:after {
+              content: '';
+              flex-basis: ~'calc((100% - 50px)/3)';
+            }
             &-item {
               display: flex;
               flex-direction: column;
@@ -5116,7 +5114,7 @@ ul.list {
               &-name {
                 position: relative;
                 margin-top: 20px;
-                font: 300 22px/1.5 @font;
+                font: 300 20px/1.5 @font;
                 cursor: pointer;
                 transition: 0.3s;
                 &:before {
@@ -5124,8 +5122,8 @@ ul.list {
                   position: absolute;
                   left: -5px;
                   top: 50%;
-                  width: 13px;
-                  height: 13px;
+                  width: 10px;
+                  height: 10px;
                   border-top: 2px solid @pink;
                   border-right: 2px solid @pink;
                   transform: translateY(-50%) rotate(45deg);
@@ -5133,7 +5131,7 @@ ul.list {
                   transition: 0.3s;
                 }
                 &.active {
-                  padding-left: 30px;
+                  padding-left: 20px;
                   font-weight: 500;
                   color: @pink;
                   &:before {
@@ -5144,7 +5142,7 @@ ul.list {
             }
           }
           &-content {
-            width: 55%;
+            width: 50%;
             transition: 0.3s;
             &-item {
               overflow: hidden;
@@ -6985,6 +6983,70 @@ ul.list {
             width: 445px;
           }
         }
+        .tabs {
+          margin-top: 80px;
+          &-title {
+            font: 700 36px/1.3 @font;
+          }
+          &-block {
+            display: flex;
+            margin-top: 40px;
+            &-item {
+              display: block;
+              margin-left: 15px;
+              padding: 5px 25px;
+              font: 300 18px/1.3 @font;
+              border: 1px solid @gray;
+              border-radius: 20px;
+              transition: 0.3s;
+              cursor: pointer;
+              &:first-child {
+                margin-left: 0;
+              }
+              &.active {
+                color: #fff;
+                background: @pink;
+                border-color: @pink;
+              }
+            }
+          }
+        }
+        .selected-tab {
+          margin-top: 80px;
+          &-title {
+            font: 500 30px/1.3 @font;
+          }
+        }
+        .tariffs {
+          margin-top: 35px;
+          padding-top: 40px;
+          &-title {
+            display: none;
+          }
+          &-desc {
+            display: none;
+          }
+          &-top {
+            margin-top: 0;
+          }
+        }
+        .features {
+          &-title {
+            font: 500 30px/1.3 @font;
+          }
+          &-block {
+            margin-top: 40px;
+            &-item {
+              width: 33%;
+              margin-top: 45px;
+            }
+          }
+        }
+        .steps {
+          padding: 55px 70px 60px;
+          background: @lgray;
+          border-radius: 20px;
+        }
       }
     }
     .transfer-page {
@@ -7883,6 +7945,9 @@ ul.list {
                 &.phone {
                   font: 500 30px/1.3 @font;
                 }
+                .nowrap {
+                  white-space: nowrap;
+                }
               }
             }
             &-list {
@@ -8110,7 +8175,7 @@ ul.list {
                 border-radius: 10px;
                 outline: none;
                 .ui-icon {
-                  width: 18px;
+                  width: 19px;
                   height: 10px;
                   background: url(../img/icon_down_black.svg) no-repeat;
                   background-size: contain;
